[package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
categories = ["network-programming", "web-programming"]
description = "Common functionality used in all Torrust HTTP servers."
documentation = "https://docs.rs/torrust-server-lib"
edition = "2024"
homepage = "https://torrust.com/"
keywords = ["lib", "server", "torrust"]
license = "AGPL-3.0-only"
name = "torrust-server-lib"
publish = true
readme = "README.md"
repository = "https://github.com/torrust/torrust-server-lib"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
derive_more = { version = "2", features = ["as_ref", "constructor", "display", "from"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
torrust-net-primitives = "0.1.0"
tower-http = { version = "0", features = ["compression-full", "cors", "propagate-header", "request-id", "trace"] }
tracing = "0"
